--- a/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/05_Blacklist/main.tex
@@ -36,34 +36,13 @@ Die Spalte 1 enthält ein Textfeld zum Anzeigen des Eintrags.
 Die Spalte 1 beinhaltet ein Sortierungselement am linken Ende.
 Die Spalte 2 beinhaltet eine Box. Diese Box beinhaltet dass die Aktion \dq Löschen \dq{} repräsentiert.
 
-\begin{center}
-    \captionsetup[figure]{labelformat=empty}
-    \inprelimg[width=0.7\textwidth]{blacklist_desktop.png}
-    \captionof{figure}{Desktop Ansicht}
-    \captionsetup[figure]{labelformat=default}
-\end{center}
-
-\vspace{0.5em}
-\begin{minipage}{\textwidth}
-    \begin{minipage}{.5\textwidth}
-        \subparagraph*{Mobil}
-        Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein.\\
-        Die obere Box beinhaltet den zentrierten Titel \dq Blacklist\dq.
-        Die untere Box beinhaltet die Sortierungsoptionen und die Blacklisteinträge.\\
-        Die Sortierungsoptionen befinden sich ganz oben und beinhaltet ein Auswahlelement. 
-        Dieses Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser.\\
-        Die Blacklisteinträge befinden sich unterhalb der Sortierungsoptionen.
-    \end{minipage}
-    \begin{minipage}{.5\textwidth}
-        \hspace{.2\textwidth}
-        \captionsetup[figure]{labelformat=empty}
-        \inprelimg[height=0.9\textwidth]{blacklist_mobil.png}
-        \captionof{figure}{Mobile Ansicht}
-        \captionsetup[figure]{labelformat=default}    
-    \end{minipage}
-\end{minipage}
-\vspace{0.5em}
-
+\subparagraph*{Mobil}
+Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein.\\
+Die obere Box beinhaltet den zentrierten Titel \dq Blacklist\dq.
+Die untere Box beinhaltet die Sortierungsoptionen und die Blacklisteinträge.\\
+Die Sortierungsoptionen befinden sich ganz oben und beinhaltet ein Auswahlelement. 
+Dieses Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser.\\
+Die Blacklisteinträge befinden sich unterhalb der Sortierungsoptionen.
 Jeder Blacklisteintrag befindet sich in seinem eigenen Abschnitt, dieser ist wiederum in folgende Segmente aufgeteilt:
 
 \begin{enumerate}
@@ -96,3 +75,20 @@ Befindet sich ein Blacklisteintrag in den Änderungen, so wird dieser nicht ange
 Die Blacklist ist absteigend nach den Blacklisteinträgen sortiert.
 Es werden alle Blacklisteinträge angefragt und angezeigt.
 Die Filteroptionen sind entsprechend angepasst.
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.69\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{blacklist_desktop.png}
+        \captionof{figure}{Desktop Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.3\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{blacklist_mobil.png}    
+        \captionof{figure}{Mobile Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
