--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -43,36 +43,16 @@ Die Spalten 1 bis 3 beinhalten ein Textfeld zur Anzeige der Informationen.
 Die Spalten 1 bis 3 beinhalten ein Sortierungselement am linken Ende.
 Die Spalte 4 beinhaltet eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
 
-\begin{center}
-    \captionsetup[figure]{labelformat=empty}
-    \inprelimg[width=0.7\textwidth]{offizielle_aliasse_desktop.png}
-    \captionof{figure}{Desktop Ansicht}
-    \captionsetup[figure]{labelformat=default}
-\end{center}
-
 Jede Zeile enthält die eindeutige Identifizierung des Kartenobjektes. Diese wird nicht angezeigt.
 
-\vspace{0.5em}
-\begin{minipage}{\textwidth}
-    \begin{minipage}{.5\textwidth}
-        \subparagraph*{Mobil}
-        Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein. \\
-        Die obere Box beinhaltet den zentrierten Titel \dq Offizielle Aliasse\dq.
-        Die untere Box beinhaltet die Sortierungsoptionen und die offiziellen Aliasse. \\
-        Die Sortierungsoptionen befinden sich ganz oben und sind in zwei Auswahlelemente aufgeteilt. 
-        Das erste Auswahlelement beinhaltet einen Eintrag für die Kategorien Alias, Gebäudenummer und Raumnummer.
-        Das zweite Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser. \\
-        Die offiziellen Aliasse befinden sich unterhalb der Sortierungsoptionen.
-    \end{minipage}
-    \begin{minipage}{.5\textwidth}
-        \hspace{.2\textwidth}
-        \captionsetup[figure]{labelformat=empty}
-        \inprelimg[height=0.9\textwidth]{offizielle_aliasse_mobil.png}
-        \captionof{figure}{Mobile Ansicht}
-        \captionsetup[figure]{labelformat=default}    
-    \end{minipage}
-\end{minipage}
-\vspace{0.5em}
+\subparagraph*{Mobil}
+Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein. \\
+Die obere Box beinhaltet den zentrierten Titel \dq Offizielle Aliasse\dq.
+Die untere Box beinhaltet die Sortierungsoptionen und die offiziellen Aliasse. \\
+Die Sortierungsoptionen befinden sich ganz oben und sind in zwei Auswahlelemente aufgeteilt. 
+Das erste Auswahlelement beinhaltet einen Eintrag für die Kategorien Alias, Gebäudenummer und Raumnummer.
+Das zweite Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser. \\
+Die offiziellen Aliasse befinden sich unterhalb der Sortierungsoptionen.
 
 Jeder offizielle Alias befindet sich in seinem eigenen Abschnitt, dieser ist wiederum in folgende Segmente aufgeteilt:
 
@@ -109,3 +89,20 @@ Befindet sich ein offizieller Alias in den Änderungen, so wird dieser nicht ang
 Die offiziellen Aliasse sind absteigend nach dem Gebäude sortiert.
 Es werden alle offiziellen Aliasse angefragt und angezeigt.
 Die Filteroptionen sind entsprechend angepasst.
+
+\subsubsection*{Bilder}
+\begin{minipage}{\linewidth}
+    \centering
+    \begin{minipage}{.69\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{offizielle_aliasse_desktop.png}
+        \captionof{figure}{Desktop Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+    \begin{minipage}{.3\textwidth}
+        \captionsetup[figure]{labelformat=empty}
+        \inprelimg[width=\textwidth]{offizielle_aliasse_mobil.png}    
+        \captionof{figure}{Mobile Ansicht}
+        \captionsetup[figure]{labelformat=default}
+    \end{minipage}
+\end{minipage}
