--- a/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
+++ b/Kapitel/02_App/06_Signup/Klassen/SignInScreen/main.tex
@@ -23,5 +23,7 @@ Der SignInScreen ist folgendermaßen aufgebaut:
     \item Darunter werden alle unterstützen Anmeldedienste angezeigt. Hat der Benutzer die Datenschutzerklärung noch nicht akzeptiert, 
     sind sie ausgegraut und ohne Funktion. Hat der Benutzer die Datenschutzerklärung noch akzeptiert, sind sie nicht ausgegraut. 
     Klickt der Benutzer einen an, wird er zur Anmeldung mit diesem Anmeldedienst weitergeleitet.
+    Ist die Anmeldung beim Anmeldedienst abgeschlossen, wird in einer Meldung angezeigt, in der angezeigt wird, ob die Anmeldung erfolgreich war.\\
+    War die Anmeldung erfolgreich wird diese Ansicht nach bestätigen der Meldung geschlossen.
 \end{itemize}
 
