--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int_ListString/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int_ListString/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getAlias(mapID : int) : List<String> aliases}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int) : Iterable<String>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts jeweils als Zeichenkette zurück.
 \paragraph*{Beschreibung}
@@ -15,7 +15,3 @@ Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Rückgabewert}
 Die Liste mit den Aliassen des gewünschten Kartenobjekts, jeweils als Zeichenkette.
 
-\paragraph*{Notizen zu Entwurfsmustern}
-\begin{itemize}
-	\item Überladen von Methoden $\Rightarrow$ Hier könnte die Bequemlichkeitsmethode verwendet werden
-\end{itemize}
