--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getBlacklist_ListString/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getBlacklist_ListString/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getBkacklist() : List<Alias> blacklistedAliases}}%$$$M
+\paragraph{\texttt{getBlacklist() : Iterable<Alias>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse, die in der Blacklist hinterlegt sind, zurück.
 \paragraph*{Beschreibung}
