--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_int,int_ListStringIntIntInt/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_int,int_ListStringIntIntInt/main.tex
@@ -1,4 +1,4 @@
-\paragraph*{\texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<(aliasSuggestion : AliasSuggestion>}}%$$$M
+\paragraph*{\texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : Iterable<aliasSuggestion : AliasSuggestion>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Alias-Vorschläge.
 \paragraph*{Beschreibung}
