--- a/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/Beschreibung/main.tex
@@ -1,6 +1,6 @@
 \subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt Http-Requests entgegen, welche gespeicherte Daten abfragen wollen.
+Nimmt Http-Requests entgegen, welche gespeicherte Daten abfragen.
 \paragraph*{Enthaltene Klassen}
 \begin{itemize}
     \item AliasQuery
