--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/Beschreibung/main.tex
@@ -3,9 +3,9 @@
 Nimmt HTTP-Requests mit dem Ziel, Aliaseinträge zu verändern, entgegen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
-    \item \texttt{blacklistAlias(toBlacklist : String) : boolean}
-    \item \texttt{removeAlias(alias : String)}
-    \item \texttt{removeFromBlacklist(blacklistedToRem : String)}
+    \item \texttt{blacklistAlias(toBlacklist : String) : Boolean}
+    \item \texttt{removeAlias(alias : String) : Boolean}
+    \item \texttt{removeFromBlacklist(blacklistedToRem : String) : Boolean}
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
