--- a/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/MapIDQuery/Beschreibung/main.tex
@@ -4,8 +4,8 @@ Nimmt Http-Requests entgegen, welche Kartenobjekte bzw. MapIDs abfragen.
 \paragraph*{Enthaltene Methoden}
 \begin{itemize}
     \item \texttt{getMapObject(mapID : int) : String}
-    \item \texttt{getMapID(mapObject : String) : int}
-    \item \texttt{getAll() : List<mapID : int>}
+    \item \texttt{getMapIDByName(mapObject : String) : int}
+    \item \texttt{getAllMapIDs() : Iterable<mapID : int>}
 \end{itemize}
 \paragraph*{Genutzte Klassen}
 \begin{itemize}
