--- a/Kapitel/00_Backend/Security/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung}%$$$M
+\subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beinhaltet alle Klassen und Konfigurationen, die zur Authentifizierung und Authorisierung des Nutzers nötig sind.
 \paragraph*{Beschreibung}
