--- a/Kapitel/00_Backend/Security/main.tex
+++ b/Kapitel/00_Backend/Security/main.tex
@@ -1,3 +1,7 @@
 \section{Security}
 
 \inprelmod{Beschreibung}
+\inprelmod{JWTFilter}
+\inprelmod{JWTPreAuthenticationToken}
+\inprelmod{SecurityConfig}
+\inprelmod{WebSecurityConfig}
