fixed for inhaltsverzeichnis

--- a/Kapitel/00_Backend/Models/Alias/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/Alias/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
     Repräsentiert einen bestehenden oder gelöschten Alias eines Kartenobjektes. Dementsprechend wird diese Entity entweder
     in der Datenhaltung der aktuellen oder die der gelöschten Aliasse gespeichert. Ein Alias ist eindeutig und es kann dementsprechend
