--- a/Kapitel/00_Backend/Models/AliasSuggestion/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/AliasSuggestion/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
     Repräsentiert einen bestehenden Alias-Vorschlag. 
          
