--- a/Kapitel/00_Backend/Models/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Paketbeschreibung}%$$$M
+\subsection*{Paketbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
     Enthält die Klassen der zu speichernden Entities.
 \paragraph*{Anmerkung}  
