--- a/Kapitel/00_Backend/Security/JWTFilter/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/JWTFilter/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Vorangeschaltener Filter, der Authentifizierung und Authorisierung verwaltet.
 \paragraph*{Beschreibung}
