--- a/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/SecurityConfig/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Konfigurationsklasse, die die Verifiziererkomponente zur Validiereung der Access-Token in JWTFilter ermöglicht.
 \paragraph*{Beschreibung}
