--- a/Kapitel/00_Backend/Services/DeletedAliasServiceImp/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/DeletedAliasServiceImp/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : DeletedAliasServiceImp}%$$$M
+\subsection*{Klassenbeschreibung : DeletedAliasServiceImp}%$$$M
 \paragraph*{Kurzbeschreibung}
 Implementiert die Methoden von DeletedAliasService.
 \paragraph*{Benötigte Repositories}
