--- a/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/MapID/Beschreibung/main.tex
@@ -1,3 +1,3 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
     Bildet eine MapId des Types int eindeutig auf das entsprechende Kartenobjekt ab.
