--- a/Kapitel/00_Backend/Models/User/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Models/User/Beschreibung/main.tex
@@ -1,3 +1,3 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Repräsentiert eindeutig einen registrierten Nutzer mit seinen jeweiligen Berechtigungen.
