--- a/Kapitel/00_Backend/Security/JWTPreAuthenticationToken/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Security/JWTPreAuthenticationToken/Beschreibung/main.tex
@@ -1,3 +1,3 @@
-\subsection{Klassenbeschreibung}%$$$M
+\subsection*{Klassenbeschreibung}%$$$M
 \paragraph*{Kurzbeschreibung}
 Token, der von \dq PreAuthenticatedAuthenticationToken \dq erbt und der die Authoritäten des authentifizierten Nutzers inneträgt. Abgelegt im SecurityContext macht er diese zugänglich.
