--- a/Kapitel/00_Backend/Services/MapIDServiceImp/Beschreibung/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDServiceImp/Beschreibung/main.tex
@@ -1,4 +1,4 @@
-\subsection{Klassenbeschreibung : MapIDServiceImp}%$$$M
+\subsection*{Klassenbeschreibung : MapIDServiceImp}%$$$M
 \paragraph*{Kurzbeschreibung}
 Implementiert die Methoden von MapIDService.
 \paragraph*{Benötigte Repositories}
